test_files/bad/unknown_keyword.ru
def A "YO" "POTO"

id "YO" or C => E